--- a/policy/go2/robot_lab/config.yaml
+++ b/policy/go2/robot_lab/config.yaml
@@ -1,54 +1,35 @@
-# Copyright (c) 2024-2025 Ziqi Fan
-# SPDX-License-Identifier: Apache-2.0
+# Isaac Lab Go2 Velocity Rough - 正确的观测顺序
+# 观测顺序: ang_vel -> gravity_vec -> commands -> dof_pos -> dof_vel -> actions
+# 参考: OBSERVATION_SPACE.md
 
 go2/robot_lab:
-  model_name: "policy.pt"
+  robot_name: go2
+  scene_name: robot_lab
+  loop_rl: 0.02  # 50 Hz control
+
+  model_name: "policy_from_23599.pt"
+
+  # 观测空间配置 - 45维 (与 Isaac Lab 训练时完全一致)
   num_observations: 45
   observations: ["ang_vel", "gravity_vec", "commands", "dof_pos", "dof_vel", "actions"]
-  observations_history: []  # 0 is the latest observation
-  observations_history_priority: "time"  # "time" or "term" priority
-  clip_obs: 100.0
-  clip_actions_lower: [-100.0, -100.0, -100.0,
-                       -100.0, -100.0, -100.0,
-                       -100.0, -100.0, -100.0,
-                       -100.0, -100.0, -100.0]
-  clip_actions_upper: [100.0, 100.0, 100.0,
-                       100.0, 100.0, 100.0,
-                       100.0, 100.0, 100.0,
-                       100.0, 100.0, 100.0]
-  rl_kp: [20.0, 20.0, 20.0,
-          20.0, 20.0, 20.0,
-          20.0, 20.0, 20.0,
-          20.0, 20.0, 20.0]
-  rl_kd: [0.5, 0.5, 0.5,
-          0.5, 0.5, 0.5,
-          0.5, 0.5, 0.5,
-          0.5, 0.5, 0.5]
-  fixed_kp: [80.0, 80.0, 80.0,
-             80.0, 80.0, 80.0,
-             80.0, 80.0, 80.0,
-             80.0, 80.0, 80.0]
-  fixed_kd: [3.0, 3.0, 3.0,
-             3.0, 3.0, 3.0,
-             3.0, 3.0, 3.0,
-             3.0, 3.0, 3.0]
-  num_of_dofs: 12
-  action_scale: [0.125, 0.25, 0.25,
-                 0.125, 0.25, 0.25,
-                 0.125, 0.25, 0.25,
-                 0.125, 0.25, 0.25]
-  wheel_indices: []
-  lin_vel_scale: 2.0
+
+  # 观测缩放 (与 Isaac Lab 一致)
   ang_vel_scale: 0.25
   dof_pos_scale: 1.0
   dof_vel_scale: 0.05
   commands_scale: [1.0, 1.0, 1.0]
-  torque_limits: [23.5, 23.5, 23.5,
-                  23.5, 23.5, 23.5,
-                  23.5, 23.5, 23.5,
-                  23.5, 23.5, 23.5]
-  default_dof_pos: [ 0.00, 0.80, -1.50,
-                     0.00, 0.80, -1.50,
-                     0.00, 0.80, -1.50,
-                     0.00, 0.80, -1.50]
-  joint_mapping: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
+
+  # PD 控制参数
+  rl_kp: [25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0, 25.0]
+  rl_kd: [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5]
+
+  # 动作缩放 (与 Isaac Lab 一致: hip=0.125, 其他=0.25)
+  action_scale: [0.125, 0.25, 0.25, 0.125, 0.25, 0.25, 0.125, 0.25, 0.25, 0.125, 0.25, 0.25]
+
+  # 默认关节位置
+  default_dof_pos: [0.0, 0.8, -1.5, 0.0, 0.8, -1.5, 0.0, 0.8, -1.5, 0.0, 0.8, -1.5]
+
+  # FSM 参数
+  getup_duration: 2.0
+  getup_kp: [60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0, 60.0]
+  getup_kd: [5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0, 5.0]
